# pytest-learn

./: pyproject.toml  pytest_guide.md
ml/: metrics.py  predictor.py  preprocessing.py
ml/churn/: __init__.py  data.py  evaluate.py  features.py  model.py  registry.py
src/pytest_learn/: __init__.py
tests/churn/: README.md  conftest.py  test_data.py  test_evaluate.py  test_features.py  test_model.py  test_pipeline.py
tests/learn/: README.md  conftest.py  test_01_first_test.py  test_02_assert_numeric.py  test_03_class.py  test_04_setup_teardown.py  test_05_fixture_basics.py  test_06_fixture_scope_autouse.py  test_07_parametrize.py  test_08_markers.py  test_09_exceptions.py  test_10_capsys.py  test_11_tmp_path.py  test_12_mock.py  test_13_snapshot_and_time.py  test_14_monkeypatch.py  test_15_caplog_and_warns.py  test_16_fixture_advanced.py  test_17_mock_advanced.py
