[project]
name = "pytest-learn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "phisignet", email = "132890251+phisignet@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.3.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "vulture>=2.16",
]

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"
