[project]
name = "pytest-learn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "phisignet", email = "132890251+phisignet@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = [
    "googletrans>=4.0.2",
    "ipykernel>=7.3.0",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "scikit-learn>=1.9.0",
    "vulture>=2.16",
]

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]                # プロジェクト直下を import パスに追加（ml/ を読めるように）
markers = [
    "slow: 時間のかかるテスト（学習など）。普段は -m \"not slow\" で除外できる",
    "fast: すぐ終わるテスト",
    "freeze_time: 時刻を固定する（pytest-freezer 導入時に有効。レッスン13）",
]
